--- a/.github/workflows/netflix-app.yml
+++ b/.github/workflows/netflix-app.yml
@@ -18,7 +18,7 @@ jobs:
         mkdir -p ~/.ssh
         echo "${{ secrets.VM_SSH_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts
+        ssh-keyscan -p 22 ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts
 
     - name: Deploy HTML/CSS files via rsync
       run: |
