--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,10 +11,10 @@ jobs:
    
     steps:
     - name: checkout code
-    - uses: actions/checkout@v4.2.2
+      uses: actions/checkout@v4.2.2
 
     - name: set up docker buildx
-    - uses: docker/setup-buildx-action@v3.11.1
+      uses: docker/setup-buildx-action@v3.11.1
 
     - name: build docker image
       run: |
